<resources>
    <string name="app_name">InSOrma</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="text_btn_login">Login</string>
    <string name="text_ask_register">Don\'t have an account?</string>
    <string name="text_btn_register">Register</string>
    <string name="desc_logo">Main logo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_username">Username</string>
    <string name="hint_phone_number">Phone number</string>
    <string name="text_ask_login">Already have an account?</string>
    <string name="text_btn_edit">Edit username</string>
    <string name="text_btn_delete">Delete account</string>
    <string name="text_btn_logout">Logout</string>
    <string name="text_btn_save">Save changes</string>
    <string name="text_no_product">¯\\_(ツ)_/¯\nThere\'s no product</string>
    <string name="text_no_transaction">¯\\_(ツ)_/¯\nThere\'s no transaction</string>
    <string name="text_no_maps">¯\\_(ツ)_/¯\nCheck your internet connection</string>
</resources>