<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.login.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/normal_distance">

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/desc_logo"
            android:src="@drawable/logo" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_distance"
            android:textColorHint="?attr/colorOutline"
            app:boxCornerRadiusBottomEnd="@dimen/round_corners"
            app:boxCornerRadiusBottomStart="@dimen/round_corners"
            app:boxCornerRadiusTopEnd="@dimen/round_corners"
            app:boxCornerRadiusTopStart="@dimen/round_corners"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/ic_outline_email_24"
            app:startIconTint="?attr/colorOutline">

            <EditText
                android:id="@+id/et_email_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="emailAddress"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                tools:ignore="SpeakableTextPresentCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tiny_distance"
            android:textColorHint="?attr/colorOutline"
            app:boxCornerRadiusBottomEnd="@dimen/round_corners"
            app:boxCornerRadiusBottomStart="@dimen/round_corners"
            app:boxCornerRadiusTopEnd="@dimen/round_corners"
            app:boxCornerRadiusTopStart="@dimen/round_corners"
            app:endIconMode="password_toggle"
            app:endIconTint="?attr/colorOutline"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/ic_outline_lock_24"
            app:startIconTint="?attr/colorOutline">

            <EditText
                android:id="@+id/et_password_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                tools:ignore="SpeakableTextPresentCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_distance"
            android:text="@string/text_btn_login"
            android:textSize="16sp"
            app:cornerRadius="@dimen/round_corners"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/tv_ask_account_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_distance"
            android:text="@string/text_ask_register"
            android:textColor="?attr/colorOutline"
            tools:ignore="TextContrastCheck" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_move_register"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_btn_register"
            android:textSize="16sp"
            app:cornerRadius="@dimen/round_corners"
            app:strokeColor="?attr/colorPrimary"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

</ScrollView>